# order-placer

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
data/: Orders.csv  Precision.csv
src/order_placer/: cli.py
src/order_placer/cex/binance/: enums.py  mock.py  order.py  rest_endpoint.py
src/order_placer/cex/core/: throttler.py
src/order_placer/core/: mock.py
